<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:baselineAligned="false">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintMeteorLayout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="#D8D8D8">

        <ImageView
            android:id="@+id/imgMeteor"
            android:layout_width="56dp"
            android:layout_height="53dp"
            android:contentDescription="@string/a_graphic_of_a_meteor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.516"
            app:srcCompat="@drawable/meteor_graphic" />

        <TextView
            android:id="@+id/meteorName"
            android:layout_width="270dp"
            android:layout_height="29dp"
            android:layout_weight="1"
            android:text="@string/meteor"
            android:textAlignment="textStart"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.304"
            app:layout_constraintStart_toEndOf="@+id/imgMeteor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07" />

        <TextView
            android:id="@+id/txtPotentiallyHazardous"
            android:layout_width="202dp"
            android:layout_height="32dp"
            android:text="@string/status"
            android:textAlignment="textStart"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.153"
            app:layout_constraintStart_toEndOf="@+id/imgMeteor"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="81dp"
            android:layout_height="19dp"
            android:text="@string/date"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.081"
            app:layout_constraintStart_toEndOf="@+id/imgMeteor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.814"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txtDiameter"
            android:layout_width="140dp"
            android:layout_height="18dp"
            android:layout_marginBottom="15dp"
            android:text="@string/diameter"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtDate"
            app:layout_constraintTop_toBottomOf="@+id/txtPotentiallyHazardous"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>